--- a/wdd130/styles/styles.css
+++ b/wdd130/styles/styles.css
@@ -8,3 +8,18 @@ nav a {
   display: block;
   padding: 20px;
 }
+h1 {
+  color: steelblue;
+}
+
+img {
+  width: 150px;
+  height: auto;
+  border: 1px solid steelblue;
+  padding: 2px;
+  box-shadow: 0 0 30px gray;
+}
+
+p {
+  padding: 10px;
+}
