--- a/wdd130/styles/styles.css
+++ b/wdd130/styles/styles.css
@@ -1,28 +1,25 @@
-main {
-  max-width: 840px;
+nav {
+  background-color: steelblue;
+  padding: 10px;
 }
 
-aside {
-  margin: 1em;
-  border: 1px solid rgba(0, 0, 0, 0.2); /* 1️⃣ */
-  padding: 1em;
-  background-color: #eee;
-  color: #333;
-  text-align: center;
+nav a {
+  color: white;
+  display: block;
+  padding: 20px;
 }
-aside img {
-  width: 200px;
-  height: auto;
+h1 {
+  color: steelblue;
 }
-main img {
+
+img {
   width: 150px;
   height: auto;
-  ...
+  border: 1px solid steelblue;
+  padding: 2px;
+  box-shadow: 0 0 30px gray;
 }
 
-p { padding: 0;}
-footer {
-  margin-top: 1em;
-  border-top: 1px solid #000;
-  text-align: center;
+p {
+  padding: 10px;
 }
