--- a/wdd130/styles/styles.css
+++ b/wdd130/styles/styles.css
@@ -1,25 +1,33 @@
-nav {
-  background-color: steelblue;
-  padding: 10px;
+main {
+  max-width: 840px;
 }
 
-nav a {
-  color: white;
-  display: block;
-  padding: 20px;
-}
-h1 {
-  color: steelblue;
+aside {
+  margin: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1em;
+  background-color: #eee;
+  color: #333;
+  text-align: center;
 }
 
-img {
+aside img {
+  width: 200px;
+  height: auto;
+}
+
+main img {
   width: 150px;
   height: auto;
-  border: 1px solid steelblue;
-  padding: 2px;
-  box-shadow: 0 0 30px gray;
+  /* Other existing CSS properties */
 }
 
 p {
-  padding: 10px;
+  padding: 0;
+}
+
+footer {
+  margin-top: 1em;
+  border-top: 1px solid #000;
+  text-align: center;
 }
